@@ -1,5 +1,11 @@
 2009-05-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	testsuite: unset installation directory variables.
+	* tests/defs.in: Before test execution, be sure to unset all
+	installation directory variables, so they cannot have an effect
+	on a `make -e install' command within a test.
+	Report by Dagobert Michelsen.
+
 	testsuite: do not change the mode of installed Libtool files.
 	* tests/defs.in: Do not use `chmod -R' on the test directory, as
 	that may change or try to change the mode of installed files:
